--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,12 +19,12 @@ body {
   overflow: hidden; }
   .step-container .btn {
     position: absolute;
-    right: 0;
-    top: 0; }
+    right: 50px;
+    top: 50px; }
   .step-container .btn-left {
     position: absolute;
-    right: 40px;
-    top: 0; }
+    right: 75px;
+    top: 50px; }
   .step-container .step {
     flex-shrink: 0 !important;
     margin: 0 24px 0 0;
@@ -34,5 +34,8 @@ body {
 
 .error {
   border: 1px solid #ff0000; }
+
+.w-500 {
+  width: 500px !important; }
 
 /*# sourceMappingURL=style.css.map */
