--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -27,14 +27,14 @@ body{
 
     .btn{
         position: absolute;
-        right: 0;
-        top: 0;
+        right: 50px;
+        top: 50px;
     }
 
     .btn-left{
         position: absolute;
-        right: 40px;
-        top: 0;
+        right: 75px;
+        top: 50px;
     }
 
     .step{
@@ -49,4 +49,8 @@ body{
 
 .error{
     border: 1px solid #ff0000;
+}
+
+.w-500{
+    width: 500px !important;
 }
