--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,6 @@
   src: url("../fonts/Poppins/Poppins-Regular.ttf");
   font-family: "Poppins";
 }
-
 body {
   font-family: "Poppins", "sans-serif";
 }
@@ -14,7 +13,6 @@ body {
 .form-control {
   box-shadow: none !important;
   outline: 0 !important;
-  //border: 1px solid #000;
 }
 
 .bg-primary {
@@ -24,35 +22,28 @@ body {
 .step-container {
   display: flex;
   overflow: hidden;
-
-  .btn {
-    position: absolute;
-    right: 50px;
-    top: 0;
-    &.login {
-      top: 50px;
-      right: 50px;
-    }
-  }
-
-  .btn-left {
-    position: absolute;
-    right: 75px;
-    top: 0;
-      &.login {
-          top: 49px;
-          right: 79px;
-      }
-  }
-
-  .step {
-    flex-shrink: 0 !important ;
-    margin: 0 24px 0 0;
-    display: none;
-    &.active {
-      display: block;
-    }
-  }
+}
+.step-container .btn {
+  position: absolute;
+  right: 50px;
+  top: 0;
+}
+.step-container .btn.login {
+  top: 50px;
+  right: 50px;
+}
+.step-container .btn-left {
+  position: absolute;
+  right: 75px;
+  top: 50px;
+}
+.step-container .step {
+  flex-shrink: 0 !important;
+  margin: 0 24px 0 0;
+  display: none;
+}
+.step-container .step.active {
+  display: block;
 }
 
 .error {
@@ -61,4 +52,4 @@ body {
 
 .w-500 {
   width: 500px !important;
-}
+}/*# sourceMappingURL=style.css.map */
