--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -72,3 +72,12 @@ body {
         transform: scale(.98);
     }
 }
+
+.user-icon{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
