--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -119,3 +119,11 @@ body {
     }
   }
 }
+
+.hero{
+    background-image: url("../images/cool-background.png");
+}
+
+#try-delevia{
+    background-color: #f4f4f4;
+}
