Dependencies updated  job listings view working

--- a/public/assets/css/jobs/style.css
+++ b/public/assets/css/jobs/style.css
@@ -9,5 +9,10 @@
 
 .jobs {
   cursor: pointer; }
+  .jobs .job-title {
+    overflow: hidden;
+    text-wrap: nowrap;
+    width: 167px;
+    text-overflow: ellipsis; }
 
 /*# sourceMappingURL=style.css.map */
