--- a/public/assets/css/jobs/style.css
+++ b/public/assets/css/jobs/style.css
@@ -37,4 +37,7 @@
   color: #000;
   border: 1px solid #ccc !important; }
 
+.vh-75 {
+  height: 75vh !important; }
+
 /*# sourceMappingURL=style.css.map */
