--- a/public/assets/css/jobs/style.scss
+++ b/public/assets/css/jobs/style.scss
@@ -1,5 +1,4 @@
 .search-bar{
-
     background-color: #f4f4f4;
 }
 
@@ -46,4 +45,8 @@
 .page-link{
     color: #000;
     border: 1px solid #ccc !important;
+}
+
+.vh-75{
+    height: 75vh !important;
 }
