--- a/public/assets/css/jobs/style.css
+++ b/public/assets/css/jobs/style.css
@@ -11,7 +11,7 @@
   cursor: pointer; }
   .jobs .job-title {
     overflow: hidden;
-    text-wrap: nowrap;
+    text-wrap: none;
     width: 167px;
     text-overflow: ellipsis; }
 
@@ -25,7 +25,7 @@
 
 .ellipsis {
   overflow: hidden;
-  text-wrap: nowrap;
+  white-space: nowrap;
   width: 167px;
   text-overflow: ellipsis; }
 
