--- a/public/assets/css/jobs/style.css
+++ b/public/assets/css/jobs/style.css
@@ -12,11 +12,31 @@
 .jobs {
   cursor: pointer;
 }
+@media screen and (min-width: 1148px) {
+  .jobs {
+    font-size: 13px !important;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .jobs {
+    font-size: medium !important;
+  }
+}
 .jobs .job-title {
   overflow: hidden;
   white-space: nowrap;
   width: 167px;
   text-overflow: ellipsis;
+}
+@media screen and (min-width: 1148px) {
+  .jobs .job-title {
+    font-size: 13px !important;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .jobs .job-title {
+    font-size: 20px !important;
+  }
 }
 
 .jobs-user-icon {
