--- a/public/assets/css/jobs/style.scss
+++ b/public/assets/css/jobs/style.scss
@@ -10,19 +10,26 @@
 }
 
 .jobs{
-    @media screen and (min-width: 1148px) {
+    @media screen and (min-width: 1120px) {
         font-size: 13px !important;
     }
     @media screen and (min-width: 1440px) {
         font-size: medium !important;
     }
     cursor: pointer;
+    .logo-img{
+        height: 161px !important;
+        border-radius: 1rem !important;
+        @media screen and (max-width: 576px) {
+            height: 187px !important;
+        }
+    }
     .job-title{
         overflow: hidden;
         white-space: nowrap;
         width: 167px;
         text-overflow: ellipsis;
-        @media screen and (min-width: 1148px) {
+        @media screen and (min-width: 1120px) {
             font-size: 13px !important;
         }
         @media screen and (min-width: 1440px) {
