--- a/public/assets/css/jobs/style.css
+++ b/public/assets/css/jobs/style.css
@@ -76,4 +76,9 @@
 
 .vh-75 {
   height: 75vh !important;
+}
+
+.company-img {
+  width: 200px !important;
+  height: 200px !important;
 }/*# sourceMappingURL=style.css.map */
