Company functions about to start

--- a/public/assets/css/jobs/style.css
+++ b/public/assets/css/jobs/style.css
@@ -81,4 +81,8 @@
 .company-img {
   width: 200px !important;
   height: 200px !important;
+}
+
+.anchor-tag {
+  font-size: 12px !important;
 }/*# sourceMappingURL=style.css.map */
