--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,7 +7,7 @@
   font-family: "Poppins";
 }
 body {
-  font-family: "Poppins", "sans-serif";
+  font-family: "Poppins", "sans-serif" !important;
 }
 
 .form-control {
